Obtain file system label from ID_FS_LABEL_ENC.

BUG: 471499